@@ -3,7 +3,7 @@
  * Finnish Language file for PhpGedView.
  *
  * phpGedView: Genealogy Viewer
- * Copyright (C) 2002 to 2008  PGV Development Team
+ * Copyright (C) 2002 to 2008  PGV Development Team. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -149,4 +149,6 @@ $pgv_lang["placecheck_zoom"]        = "Zoomaus=";
 $pgv_lang["placecheck_options"]     = "Paikkatarkistus lista valinnat";
 $pgv_lang["placecheck_filter_text"] = "Lista suodatus valinnat";
 $pgv_lang["placecheck_match"] 		= "Sisällytä täysin vastaavat paikat -";
+$pgv_lang["placecheck_lati"] 		= "Leveysaste";
+$pgv_lang["placecheck_long"] 		= "Pituusaste";
 ?>
